2014-07-31  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/generic/safe-fatal.h: New file.
	* sysdeps/unix/sysv/linux/safe-fatal.h: New file.
	* nptl/forward.c: Include it.
	(__pthread_unwind): Use __safe_fatal as default action, rather
	than a bogus use of INTERNAL_SYSCALL that could never work.

	* config.h.in (HAVE_BUILTIN_TRAP): New #define to 0.
	* configure.ac (libc_cv_builtin_trap): New test.
	* configure: Regenerated.
	* sysdeps/generic/abort-instr.h [HAVE_BUILTIN_TRAP]
	(ABORT_INSTRUCTION): Define using __builtin_trap.

	* nptl/pthreadP.h (SIGCANCEL, SIGTIMER, SIGSETXID, __xidcmd): Moved ...
	* sysdeps/unix/sysv/linux/nptl-signals.h: ... to this new file.
	* sysdeps/nptl/nptl-signals.h: New file.
	* nptl/pthreadP.h: Include <nptl-signals.h>.

2014-07-31  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/s390-64/utf16-utf32-z9.c
	(ONE_DIRECTION): Define.
	* sysdeps/s390/s390-64/utf8-utf16-z9.c
	(ONE_DIRECTION): Define.
	* sysdeps/s390/s390-64/utf8-utf32-z9.c
	(ONE_DIRECTION): Define.

2014-07-31  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/Makefile: Delete file.
	* sysdeps/s390/Versions (GLIBC_2.19): Remove __setjmp.
	* sysdeps/s390/__longjmp.c: Delete file.
	* sysdeps/s390/bits/setjmp.h (__s390_jmp_buf):
	Remove fields __flags and __reserved.
	* sysdeps/s390/longjmp.c: Include setjmp/longjmp.c
	and add versioning.
	* sysdeps/s390/rtld-__longjmp.c: Delete file.
	* sysdeps/s390/rtld-global-offsets.sym: Likewise.
	* sysdeps/s390/rtld-setjmp.S: Likewise.
	* sysdeps/s390/s390-32/__longjmp-common.c: Move to ...
	* sysdeps/s390/s390-32/__longjmp.c: ... here.
	* sysdeps/s390/s390-32/setjmp-common.S: Move to ...
	* sysdeps/s390/s390-32/setjmp.S: ... here.
	Add versioning.
	(__sigsetjmp): Remove setting __flags field.
	* sysdeps/s390/s390-64/__longjmp-common.c:Move to ...
	* sysdeps/s390/s390-64/__longjmp.c: ... here.
	* sysdeps/s390/s390-64/setjmp-common.S: Move to ...
	* sysdeps/s390/s390-64/setjmp.S: ... here.
	Add versioning.